--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -9,3 +9,7 @@
 @import "~admin-lte/dist/css/adminlte.min.css";
 
 @import "custom";
+
+@import "~admin-lte/plugins/select2/css/select2.min.css";
+@import "~admin-lte/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css";
+@import "~jquery-datetimepicker/build/jquery.datetimepicker.min.css";
